newtype-tools/tests/trybuild/newtype/struct-list-path-valid.stderr
error: expected `#[newtype(from(...))]`
 --> tests/trybuild/newtype/struct-list-path-valid.rs:2:11
  |
2 | #[newtype(from)]
  |           ^^^^
