newtype-tools/tests/trybuild/newtype/struct-list-path-valid.rs
#[derive(newtype_tools::Newtype)]
#[newtype(from)]
struct Oranges(u32);

fn main() {}
